--- a/main/conference-images.html
+++ b/main/conference-images.html
@@ -139,7 +139,7 @@
                   <a
                     target="_blank"
                     class="nav-link"
-                    href="pdf/RACCAI-brochure-2025.pdf"
+                    href="./images/SCMAI-Brochure.pdf"
                     >Download Brochure</a
                   >
                 </li>
@@ -360,7 +360,7 @@
             <div class="col-12 col-md-4">
               <div class="ftr_contact">
                 <h3>Get in Touch</h3>
-                <a class="" href="https://www.cgc.ac.in">
+                <a class="" href="https://www.cuchd.in/">
                   <img
                     src="images/cgcfooter.png"
                     width="150"
@@ -370,14 +370,15 @@
                   />
                 </a>
                 <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>icaaies@cgc.ac.in</a
+                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>9056710731</a
+                  ><i class="fa fa-phone"> </i>97819-26200</a
                 >
                 <a
-                  ><i class="fa fa-globe"> </i>State Highway 12A Jhanjeri,
-                  Sahibzada Ajit Singh Nagar, Punjab 140307</a
+                  ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
+                  Chandigarh-Ludhiana Highway, Gharuan, Mohali, Punjab
+                  (India)</a
                 >
               </div>
             </div>
@@ -385,23 +386,31 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CU</a></li>
+                  <li>
+                    <a href="about-cgc.html"> About CU</a>
+                  </li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
-                  <li><a href="call-for-paper.html"> Call for papers</a></li>
+                  <li>
+                    <a href="call-for-paper.html"> Call for papers</a>
+                  </li>
                   <li>
                     <a href="organizing-commitee.html">Organizing Committee</a>
                   </li>
                   <li><a href="contact.html"> Contact</a></li>
-                  <li><a href="registration.html"> Registration</a></li>
-                  <li><a href="download.html"> Downloads</a></li>
+                  <li>
+                    <a href="registration.html"> Registration</a>
+                  </li>
+                  <li>
+                    <a href="download.html"> Downloads</a>
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="col-12 col-md-4">
               <div class="ftr_map">
-                <h3>Find CGC Jhanjeri</h3>
+                <h3>Find CU</h3>
                 <img src="images/map.png" />
               </div>
             </div>
@@ -410,7 +419,7 @@
         <div class="footer_bottom">
           <div class="container-xxl">
             <div class="copyrgt">
-              Copyright © 2024 Chandigarh Group of Colleges Jhanjeri
+              Copyright © 2024 Chandigarh University Mohali
             </div>
           </div>
         </div>
