--- a/main/conference-theme.html
+++ b/main/conference-theme.html
@@ -129,7 +129,7 @@
                   <a
                     target="_blank"
                     class="nav-link"
-                    href="pdf/RACCAI-brochure-2025.pdf"
+                    href="./images/SCMAI-Brochure.pdf"
                     >Download Brochure</a
                   >
                 </li>
@@ -144,146 +144,146 @@
     </header>
 
     <div class="page-content">
-      <section class="inner_banner">
-        <div class="banner_title text-center">
-          <h1>TECHINCAL TRACKS</h1>
-        </div>
-      </section>
-      <section class="conference_sec py_3">
-        <div class="container-xxl">
-          <div class="max_container">
-            <div class="row">
-              <div class="col-12 col-lg-6 mt-4">
-                <h3>Technical tracks</h3>
-                <ol>
-                  <li>
-                    <strong
-                      >Artificial intelligence and machine learning</strong
-                    >
-                    <ul>
-                      <li>
-                        Intelligent models, methods, technologies and systems
-                      </li>
-                      <li>AI technologies in decision support systems</li>
-                      <li>
-                        Machine learning technologies for decision support
-                      </li>
-                    </ul>
-                  </li>
-                  <li>
-                    <strong
-                      >Information technologies and information systems</strong
-                    >
-                    <ul>
-                      <li>Information systems</li>
-                      <li>Decision support software</li>
-                      <li>
-                        Methods of information protection and ensuring
-                        information security
-                      </li>
-                    </ul>
-                  </li>
-                  <li>
-                    <strong>Decision-making methods</strong>
-                    <ul>
-                      <li>
-                        System analysis and mathematical methods of decision
-                        making
-                      </li>
-                      <li>Mathematical modeling in decision-making problems</li>
-                      <li>Methods of decision-making in complex systems.</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <strong
-                      >Applications of artificial intelligence technologies in
-                      systems for various purposes</strong
-                    >
-                    <ul>
-                      <li>Biotechnology and information systems in medicine</li>
-                      <li>Information technology and management</li>
-                      <li>Robots and robotic systems</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <strong>Philosophy of Artificial Intelligence</strong>
-                  </li>
-                  <li>
-                    <strong
-                      >Round table "Genetics, bioinformatics and intelligent
-                      decision-making methods"</strong
-                    >
-                  </li>
-                  <li>
-                    <strong
-                      >Round table "Intelligent methods of biomedical data
-                      processing"</strong
-                    >
-                  </li>
-                </ol>
+      <section class="pb100">
+        <div class="container">
+          <div class="section_title">
+            <h3 class="title">Conference Tracks</h3>
+          </div>
+          <!--event features-->
+          <div class="row justify-content-center mt30">
+            <div class="col-12 col-md-6 col-lg-3">
+              <div class="card track-card">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    Track 1 - AI-Driven Sustainable Communication
+                  </h5>
+                  <ul class="card-text">
+                    <li>
+                      AI-powered tools for reducing communication overhead
+                    </li>
+                    <li>Enhancing energy efficiency in data transmission</li>
+                    <li>Promoting resource-saving technologies through AI</li>
+                    <li>Virtual collaboration for climate change solutions</li>
+                    <li>
+                      Reducing carbon footprint through virtual workspaces
+                    </li>
+                    <li>
+                      Supporting global sustainability movements in virtual
+                      spaces
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <!-- <div class="col-12 col-lg-6 mt-4">
-                <h3>Track-2: Innovative Computing</h3>
-                <ul>
-                  <li>Computational Intelligence</li>
-                  <li>Signal Processing</li>
-                  <li>Computer vision</li>
-                  <li>Soft Computing</li>
-                  <li>Decision Support and Decision making</li>
-                  <li>Parallel computing</li>
-                  <li>Distributed computing</li>
-                  <li>Grid computing</li>
-                  <li>Cloud computing</li>
-                  <li>Mobile computing</li>
-                  <li>Biomedical computing</li>
-                  <li>Ubiquitous computing</li>
-                  <li>Image processing</li>
-                  <li>Information retrieval</li>
-                  <li>Deep learning</li>
-                  <li>Expert system</li>
-                  <li>Internet computing</li>
-                  <li>High performance computing</li>
-                </ul>
-              </div> -->
-              <!-- <div class="col-12 col-lg-6 mt-4">
-                <h3>
-                  Track-3: Artificial Intelligence/Machine
-                  Learning/Robotics/IOT/Blockchain
-                </h3>
-                <ul>
-                  <li>Machine Learning</li>
-                  <li>Machine Learning</li>
-                  <li>Artificial Intelligence</li>
-                  <li>Robotics</li>
-                  <li>Blockchain</li>
-                  <li>Intelligent Systems for IoT</li>
-                  <li>Environmental Monitoring</li>
-                  <li>Machine to Machine/Device Communications</li>
-                  <li>Network Design and Architecture</li>
-                  <li>Wireless Systems and Applications</li>
-                  <li>Infrastructure Management</li>
-                  <li>IoT and Big Data</li>
-                  <li>Home Automation</li>
-                  <li>Security and Privacy</li>
-                  <li>Social Implications of IoT</li>
-                  <li>Technological focus for Smart Environments</li>
-                  <li>Smart City Case Studies</li>
-                  <li>Data Analysis and Visualization</li>
-                  <li>Architecture for secure and interactive IoT</li>
-                  <li>Sensor, Wireless Technologies and APIs</li>
-                  <li>Emerging IoT</li>
-                </ul>
-              </div> -->
-              <!-- <div class="col-12 col-lg-6 mt-4">
-                <h3>Track-3: Miscellaneous Topic</h3>
-                <ul>
-                  <li>Advanced Materials</li>
-                </ul>
-              </div> -->
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-3">
+              <div class="card track-card">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    Track 2 - Green AI and Energy Efficiency
+                  </h5>
+                  <ul class="card-text">
+                    <li>Reducing energy consumption in AI model training</li>
+                    <li>Promoting eco-friendly AI hardware solutions</li>
+                    <li>Optimizing AI systems for low-power devices</li>
+                    <li>Immersive communication tools in virtual spaces</li>
+                    <li>Overcoming latency and bandwidth challenges</li>
+                    <li>
+                      Building decentralized, sustainable communication networks
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-3">
+              <div class="card track-card">
+                <div class="card-body">
+                  <h5 class="card-title">Track 3 - AI and Future Workspaces</h5>
+                  <ul class="card-text">
+                    <li>AI in Hybrid Work Environments</li>
+                    <li>
+                      AI-Driven Talent Acquisition and Workforce Management
+                    </li>
+                    <li>AI for Predictive Workforce Analytics</li>
+                    <li>
+                      AI-Enabled Virtual Assistants for Workplace Efficiency
+                    </li>
+                    <li>AI's Role in Cybersecurity for Remote Workplaces</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-3">
+              <div class="card track-card">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    Track 4 - AI-Enabled Smart Cities and Education
+                  </h5>
+                  <ul class="card-text">
+                    <li>Integrating AI in Urban Planning and Development</li>
+                    <li>
+                      AI-Powered Solutions for Smart Transportation Systems
+                    </li>
+                    <li>
+                      Leveraging AI for Enhancing Educational Access in Urban
+                      Areas
+                    </li>
+                    <li>
+                      Smart Campus Solutions: AI in Educational Institutions
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- CSS for the cards and hover effect -->
+      <style>
+        .track-card {
+          border: 1px solid #ddd;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          transition: transform 0.3s ease, box-shadow 0.3s ease;
+          background-color: #fff;
+          margin-top: 50px;
+          margin-bottom: 50px;
+        }
+
+        .track-card:hover {
+          transform: translateY(-10px);
+          box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .track-card .card-body {
+          padding: 20px;
+        }
+
+        .track-card .card-title {
+          font-size: 1.25rem;
+          font-weight: bold;
+          color: #333;
+          list-style-type: disc;
+        }
+
+        .track-card .card-text {
+          font-size: 1rem;
+          color: #666;
+          padding-left: 20px;
+          margin-top: 20px1;
+        }
+
+        .track-card .card-text li {
+          list-style-type: disc;
+          margin-bottom: 8px;
+        }
+
+        .track-card:hover .card-title {
+          color: #16423c;
+        }
+      </style>
     </div>
 
     <footer class="page-footer">
@@ -293,7 +293,7 @@
             <div class="col-12 col-md-4">
               <div class="ftr_contact">
                 <h3>Get in Touch</h3>
-                <a class="" href="https://www.cgc.ac.in">
+                <a class="" href="https://www.cuchd.in/">
                   <img
                     src="images/cgcfooter.png"
                     width="150"
@@ -319,17 +319,25 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CU</a></li>
+                  <li>
+                    <a href="about-cgc.html"> About CU</a>
+                  </li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
-                  <li><a href="call-for-paper.html"> Call for papers</a></li>
+                  <li>
+                    <a href="call-for-paper.html"> Call for papers</a>
+                  </li>
                   <li>
                     <a href="organizing-commitee.html">Organizing Committee</a>
                   </li>
                   <li><a href="contact.html"> Contact</a></li>
-                  <li><a href="registration.html"> Registration</a></li>
-                  <li><a href="download.html"> Downloads</a></li>
+                  <li>
+                    <a href="registration.html"> Registration</a>
+                  </li>
+                  <li>
+                    <a href="download.html"> Downloads</a>
+                  </li>
                 </ul>
               </div>
             </div>
