--- a/main/index.html
+++ b/main/index.html
@@ -128,7 +128,7 @@
                   <a
                     target="_blank"
                     class="nav-link"
-                    href="pdf/RACCAI-brochure-2025.pdf"
+                    href="./images/SCMAI-Brochure.pdf"
                     >Download Brochure</a
                   >
                 </li>
@@ -186,7 +186,7 @@
                   Intelligence (SCMAI - 2025) <br />
                 </h2>
                 <h3 class="yellow_text">
-                  Date: 20<sup>th</sup> - 21<sup>st</sup> February 2025
+                  Date: 15<sup>th</sup> - 16<sup>th</sup> April 2025
                 </h3>
                 <div class="item_btns">
                   <a
@@ -194,9 +194,7 @@
                     class="button yellow_btn"
                     >Registration</a
                   >
-                  <a
-                    href="https://cmt3.research.microsoft.com/SCMAI2025"
-                    class="button red_btn"
+                  <a href="./404Page.html" class="button red_btn"
                     >Paper Submission</a
                   >
                 </div>
@@ -222,7 +220,7 @@
                   Intelligence (SCMAI - 2025) <br />
                 </h2>
                 <h3 class="yellow_text">
-                  Date: 20<sup>th</sup> - 21<sup>st</sup> February 2025
+                  Date: 15<sup>th</sup> - 16<sup>th</sup> April 2025
                 </h3>
                 <div class="item_btns">
                   <a
@@ -258,7 +256,7 @@
                   Intelligence (SCMAI - 2025) <br />
                 </h2>
                 <h3 class="yellow_text">
-                  Date: 20<sup>th</sup> - 21<sup>st</sup> February 2025
+                  Date: 15<sup>th</sup> - 16<sup>th</sup> April 2025
                 </h3>
                 <div class="item_btns">
                   <a
@@ -365,7 +363,7 @@
                 <div class="col_inner">
                   <img src="images/calendar.png" />
                   <h3>Full Paper Submission :-</h3>
-                  <p>10<sup>th</sup> October 2024</p>
+                  <p>20<sup>th</sup> March 2025</p>
                   <a href="#" class="link-btn"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
@@ -375,7 +373,7 @@
                 <div class="col_inner">
                   <img src="images/calendar.png" />
                   <h3>Full Paper Acceptance Notification :-</h3>
-                  <p>20<sup>th</sup> October 2024</p>
+                  <p>1<sup>st</sup> April 2025</p>
                   <a href="#" class="link-btn"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
@@ -385,7 +383,7 @@
                 <div class="col_inner">
                   <img src="images/calendar.png" />
                   <h3>Last Date of Registration :-</h3>
-                  <p>5<sup>th</sup> November 2024</p>
+                  <p>10<sup>th</sup> April 2025</p>
                   <a href="#" class="link-btn"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
@@ -406,7 +404,7 @@
             <h2 class="text_red">REGISTRATION FEE</h2>
           </div>
           <img
-            src="images/table22.jpg"
+            src="images/Green and White Simple Beauty Treatment Comparison Chart.png"
             style="align-items: center; margin-left: 7%"
             alt=""
           />
@@ -553,7 +551,7 @@
                         First International Conference on Sustainable
                         Communication, Metaverse and Artificial Intelligence
                         (SCMAI - 2025)
-                        <strong>20th- 21st February 2025</strong>
+                        <strong>15th- 16th April 2025</strong>
                       </p>
                     </div>
                   </div>
@@ -572,7 +570,7 @@
             <div class="col-12 col-md-4">
               <div class="ftr_contact">
                 <h3>Get in Touch</h3>
-                <a class="" href="https://www.cgc.ac.in">
+                <a class="" href="https://www.cuchd.in/">
                   <img
                     src="images/cgcfooter.png"
                     width="150"
