--- a/main/international-advisors.html
+++ b/main/international-advisors.html
@@ -128,7 +128,7 @@
                   <a
                     target="_blank"
                     class="nav-link"
-                    href="pdf/RACCAI-brochure-2025.pdf"
+                    href="./images/SCMAI-Brochure.pdf"
                     >Download Brochure</a
                   >
                 </li>
@@ -380,7 +380,7 @@
             <div class="col-12 col-md-4">
               <div class="ftr_contact">
                 <h3>Get in Touch</h3>
-                <a class="" href="https://www.cgc.ac.in">
+                <a class="" href="https://www.cuchd.in/">
                   <img
                     src="images/cgcfooter.png"
                     width="150"
@@ -406,17 +406,25 @@
               <div class="ftr_qlink">
                 <h3>Quick Links</h3>
                 <ul class="m-0 list-unstyled">
-                  <li><a href="about-cgc.html"> About CU</a></li>
+                  <li>
+                    <a href="about-cgc.html"> About CU</a>
+                  </li>
                   <li>
                     <a href="conference-theme.html"> Conference Themes</a>
                   </li>
-                  <li><a href="call-for-paper.html"> Call for papers</a></li>
+                  <li>
+                    <a href="call-for-paper.html"> Call for papers</a>
+                  </li>
                   <li>
                     <a href="organizing-commitee.html">Organizing Committee</a>
                   </li>
                   <li><a href="contact.html"> Contact</a></li>
-                  <li><a href="registration.html"> Registration</a></li>
-                  <li><a href="download.html"> Downloads</a></li>
+                  <li>
+                    <a href="registration.html"> Registration</a>
+                  </li>
+                  <li>
+                    <a href="download.html"> Downloads</a>
+                  </li>
                 </ul>
               </div>
             </div>
