--- a/main/paper-template.html
+++ b/main/paper-template.html
@@ -130,7 +130,7 @@
                   <a
                     target="_blank"
                     class="nav-link"
-                    href="pdf/RACCAI-brochure-2025.pdf"
+                    href="./images/SCMAI-Brochure.pdf"
                     >Download Brochure</a
                   >
                 </li>
@@ -210,7 +210,7 @@
             <div class="col-12 col-md-4">
               <div class="ftr_contact">
                 <h3>Get in Touch</h3>
-                <a class="" href="https://www.cgc.ac.in">
+                <a class="" href="https://www.cuchd.in/">
                   <img
                     src="images/cgcfooter.png"
                     width="150"
