--- a/main/registration.html
+++ b/main/registration.html
@@ -130,7 +130,7 @@
                   <a
                     target="_blank"
                     class="nav-link"
-                    href="pdf/RACCAI-brochure-2025.pdf"
+                    href="./images/SCMAI-Brochure.pdf"
                     >Download Brochure</a
                   >
                 </li>
@@ -160,7 +160,11 @@
           >
             <h2 class="text_red">REGISTRATION FEE</h2>
           </div>
-          <img src="images/table22.jpg" alt="" style="margin-left: 7%" />
+          <img
+            src="images/Green and White Simple Beauty Treatment Comparison Chart.png"
+            alt=""
+            style="margin-left: 7%"
+          />
         </div>
       </section>
     </div>
@@ -172,7 +176,7 @@
             <div class="col-12 col-md-4">
               <div class="ftr_contact">
                 <h3>Get in Touch</h3>
-                <a class="" href="https://www.cgc.ac.in">
+                <a class="" href="https://www.cuchd.in/">
                   <img
                     src="images/cgcfooter.png"
                     width="150"
