--- a/main/organizing-commitee.html
+++ b/main/organizing-commitee.html
@@ -372,7 +372,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/Dr_Snehlata_E17399.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Sneh Sheoran</h3>
@@ -417,7 +417,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/Dr Neha Dutta.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Neha Dutta</h3>
@@ -430,7 +430,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/Charnpreet.E5922jpg.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Charnpreet Kaur</h3>
@@ -469,7 +469,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/Deepshikha 4952.JPG" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Deepshikha</h3>
@@ -508,7 +508,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/Bhupinder Singh,E12856.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Bhupinder Singh</h3>
@@ -573,7 +573,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/Er.Shammy Samita__E15675 .jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Shammy Samita</h3>
@@ -599,7 +599,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/snjay.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Sanjay Singla</h3>
@@ -683,7 +683,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/santosh_E11120.jpeg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Santosh Kumar</h3>
@@ -709,7 +709,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/amita_e16480.jpg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Amita</h3>
@@ -722,7 +722,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/himanshi_e13362.jpg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Himanshi</h3>
@@ -735,7 +735,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/Daulat_E13701.JPG" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Daulat Sihag</h3>
@@ -748,7 +748,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/narinder.jpg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Narinder Yadav</h3>
@@ -761,7 +761,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/Gagan_E8657.jpg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Gagandeep Singh</h3>
@@ -813,7 +813,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/drive-download-20241010T064425Z-001/dr_praveen_kumar_mannepalli-150-180.jpeg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Parveen Kumar</h3>
