--- a/main/organizing-commitee.html
+++ b/main/organizing-commitee.html
@@ -128,7 +128,7 @@
                   <a
                     target="_blank"
                     class="nav-link"
-                    href="./images/ITIDS2024_Poster.pdf.pdf"
+                    href="./images/ITIDS2024_Poster.pdf"
                     >Download Brochure</a
                   >
                 </li>
