form update feature update

--- a/main/call-for-paper.html
+++ b/main/call-for-paper.html
@@ -160,7 +160,7 @@
                   original research Within the conference, research papers
                   should present new perspectives. All participants need to
                   register prior to attending the conference. For guidelines and
-                  further queries email at - ad1.cse@cumail.in
+                  further queries email at - scmai2025@cumail.in
                 </p>
 
                 <br />
@@ -236,11 +236,11 @@
                     alt=""
                   />
                 </a>
-                <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
+                <a href="mailto: scmai2025@cumail.in"
+                  ><i class="fa fa-envelope"> </i>scmai2025@cumail.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>97819-26200</a
+                  ><i class="fa fa-phone"> </i>7876444448</a
                 >
                 <a
                   ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
