--- a/main/index.html
+++ b/main/index.html
@@ -190,7 +190,7 @@
                 </h3>
                 <div class="item_btns">
                   <a
-                    href="https://forms.gle/94nZvmfLujAZqmDp6"
+                    href="https://forms.gle/7b5FbUSQzwoGhSRX8"
                     class="button yellow_btn"
                     >Registration</a
                   >
@@ -224,13 +224,11 @@
                 </h3>
                 <div class="item_btns">
                   <a
-                    href="https://forms.gle/94nZvmfLujAZqmDp6"
+                    href="https://forms.gle/7b5FbUSQzwoGhSRX8"
                     class="button yellow_btn"
                     >Registration</a
                   >
-                  <a
-                    href="https//cmt3.research.microsoft.com/RACCAI2025"
-                    class="button green-btn"
+                  <a href="./404Page.html" class="button green-btn"
                     >Paper Submission</a
                   >
                 </div>
@@ -260,13 +258,11 @@
                 </h3>
                 <div class="item_btns">
                   <a
-                    href="https://forms.gle/94nZvmfLujAZqmDp6"
+                    href="https://forms.gle/7b5FbUSQzwoGhSRX8"
                     class="button yellow_btn"
                     >Registration</a
                   >
-                  <a
-                    href="https://cmt3.research.microsoft.com/SCMAI2025"
-                    class="button red_btn"
+                  <a href="./404Page.html" class="button red_btn"
                     >Paper Submission</a
                   >
                 </div>
@@ -579,11 +575,11 @@
                     alt=""
                   />
                 </a>
-                <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
+                <a href="mailto: scmai2025@cumail.in"
+                  ><i class="fa fa-envelope"> </i>scmai2025@cumail.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>97819-26200</a
+                  ><i class="fa fa-phone"> </i>7876444448</a
                 >
                 <a
                   ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
