--- a/main/international-advisors.html
+++ b/main/international-advisors.html
@@ -389,11 +389,11 @@
                     alt=""
                   />
                 </a>
-                <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
+                <a href="mailto: scmai2025@cumail.in"
+                  ><i class="fa fa-envelope"> </i>scmai2025@cumail.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>97819-26200</a
+                  ><i class="fa fa-phone"> </i>7876444448</a
                 >
                 <a
                   ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
