--- a/main/organizing-commitee.html
+++ b/main/organizing-commitee.html
@@ -404,7 +404,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/tanudhiman.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Tanu Dhiman</h3>
@@ -443,7 +443,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/gurleen.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Gurleen Kaur</h3>
@@ -482,7 +482,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/kushwant.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Kushwant Kaur</h3>
@@ -534,7 +534,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/meenakshi.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Er. Meenakshi Rana</h3>
@@ -586,7 +586,7 @@
               <div class="col-12 col-md-6 col-lg-4 comite_item">
                 <div class="c_item_wrap">
                   <div class="ci_img">
-                    <img src="images/placeholder.png" alt="#" />
+                    <img src="images/manju.jpg" alt="#" />
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Manju Lata</h3>
@@ -637,7 +637,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/abdul.jpg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Dr. M. Abdul Wassay</h3>
@@ -774,10 +774,10 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/neelamnisamal.jpg" alt="#" />
         </div>
         <div class="ci_content">
-          <h3>Er. Amrita</h3>
+          <h3>Er. Neelamni Samal</h3>
           <p>Faculty, CU</p>
         </div>
       </div>
@@ -787,7 +787,7 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/placeholder.png" alt="#" />
+          <img src="images/aparna.jpg" alt="#" />
         </div>
         <div class="ci_content">
           <h3>Er. Aparna</h3>
@@ -844,11 +844,11 @@
                     alt=""
                   />
                 </a>
-                <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
+                <a href="mailto: scmai2025@cumail.in"
+                  ><i class="fa fa-envelope"> </i>scmai2025@cumail.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>97819-26200</a
+                  ><i class="fa fa-phone"> </i>7876444448</a
                 >
                 <a
                   ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
