--- a/main/contact.html
+++ b/main/contact.html
@@ -166,8 +166,8 @@
                         >
                         <br />
                         E-mail:
-                        <a href="mailto: ad1.cse@cumail.in"
-                          >ad1.cse@cumail.in</a
+                        <a href="mailto: scmai2025@cumail.in"
+                          >scmai2025@cumail.in</a
                         >
                       </p>
                       <p style="color: #000000">
@@ -224,9 +224,9 @@
                       <!-- <li><a href="tel:9779454366" target="_main"> <i class="fa fa-phone" aria-hidden="true"></i><span>+91&nbsp;9779454366</span></a></li>
                                         <li><a href="tel:9812072809" target="_main"> <i class="fa fa-phone" aria-hidden="true"></i><span>+91&nbsp;9812072809</span></a></li> -->
                       <!-- <li>
-                        <a href="mailto:ad1.cse@cumail.in" target="_main"
+                        <a href="mailto:scmai2025@cumail.in" target="_main"
                           ><i class="fa fa-envelope" aria-hidden="true"></i>
-                          <span>ad1.cse@cumail.in</span></a
+                          <span>scmai2025@cumail.in</span></a
                         >
                       </li> -->
                       <!--<li><i class="ion-email-unread"></i><span>isaconup2019@tmu.ac.in (for rest of queries)</span></li>-->
@@ -271,11 +271,11 @@
                     alt=""
                   />
                 </a>
-                <a href="mailto: icaaies@cgc.ac.in"
-                  ><i class="fa fa-envelope"> </i>ad1.cse@cumail.in</a
+                <a href="mailto: scmai2025@cumail.in"
+                  ><i class="fa fa-envelope"> </i>scmai2025@cumail.in</a
                 >
                 <a href="tel: 9056710731"
-                  ><i class="fa fa-phone"> </i>97819-26200</a
+                  ><i class="fa fa-phone"> </i>7876444448</a
                 >
                 <a
                   ><i class="fa fa-globe"> </i>CHANDIGARH UNIVERSITY NH-05,
