--- a/main/paper-template.html
+++ b/main/paper-template.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <title>
-      Paper-Templates - INTERNATIONAL CONFERENCE on Biotech Frontiers
-    </title>
+    <title>Paper-Templates - SCMAI-2025</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
